--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "genkit": "^1.0.4",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
+    "nextn": "*",
+    "nextn-stackdriver": "*",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -61,6 +63,8 @@
     "genkit-cli": "^1.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "typescript": "^5",
+    "typeface-roboto": "^1.1.13"
+  },
+  "packageManager": "yarn@4.1.0"
 }
