--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-ec2": "*",
+    "@azure/arm-resourcegraph": "*",
     "@genkit-ai/googleai": "^1.0.4",
     "@genkit-ai/next": "^1.0.4",
     "@hookform/resolvers": "^4.1.3",
@@ -49,12 +50,12 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-force-graph": "^1.43.1",
+    "react-force-graph-2d": "^1.27.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "@azure/arm-resourcegraph": "*"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -63,8 +64,8 @@
     "genkit-cli": "^1.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "typeface-roboto": "^1.1.13"
+    "typeface-roboto": "^1.1.13",
+    "typescript": "^5"
   },
   "packageManager": "yarn@4.1.0"
 }
